Exclude bot matches and endif.

--- a/pkg/qtvscraper/test_files/demos_2.html
+++ b/pkg/qtvscraper/test_files/demos_2.html
@@ -25,9 +25,9 @@
       </thead>
       <tbody>
         <tr class="odd">
-          <td class="stream"><a href="/watch.qtv?demo=duel_gombok_gombot_vs_bro%5Bdm6%5D221028-0355.mvd"><img src="/stream.png" width="14" height="15"></a></td>
-          <td class="save"><a href="/dl/demos/duel_gombok_gombot_vs_bro%5Bdm6%5D221028-0355.mvd"><img src="/save.png" width="16" height="16"></a></td>
-          <td class="name">duel_gombok_gombot_vs_bro[dm6]221028-0355.mvd</td><td class="size">143 kB</td>
+          <td class="stream"><a href="/watch.qtv?demo=duel_alpha_vs_beta%5Bdm6%5D221028-0355.mvd"><img src="/stream.png" width="14" height="15"></a></td>
+          <td class="save"><a href="/dl/demos/duel_alpha_vs_beta%5Bdm6%5D221028-0355.mvd"><img src="/save.png" width="16" height="16"></a></td>
+          <td class="name">duel_alpha_vs_beta[dm6]221028-0355.mvd</td><td class="size">143 kB</td>
         </tr>
         <tr class="even">
           <td class="stream"><a href="/watch.qtv?demo=duel_idle_vs_bro%5Bpovdmm4%5D221028-0014.mvd"><img src="/stream.png" width="14" height="15"></a></td>
