Update wiki event parsing.

--- a/pkg/qwnu/test_files/wiki_index.html
+++ b/pkg/qwnu/test_files/wiki_index.html
@@ -486,7 +486,7 @@ null,"wgAmericanDates":!1,"wgMediaViewerOnClick":!0,"wgMediaViewerEnabledByDefau
 <tr>
 <td style="width:21px;float: left;vertical-align: -webkit-baseline-middle;padding:0.4em 0 0 0.6em;"><a href="/wiki/QW_LAN_Party_Poland_2021" title="QW LAN Party Poland 2021"><img alt="QW LAN Party Poland 2021" src="/w/images/thumb/b/b8/Dqer-icon.png/21px-Dqer-icon.png" decoding="async" width="21" height="21" srcset="/w/images/thumb/b/b8/Dqer-icon.png/32px-Dqer-icon.png 1.5x, /w/images/thumb/b/b8/Dqer-icon.png/42px-Dqer-icon.png 2x" data-file-width="500" data-file-height="500" /></a>
 </td>
-<td style="width:80%;padding:0.5em 0 0 0.8em;float: left;"><a href="/wiki/QW_LAN_PL_2023" title="QW LAN PL 2023">QW LAN PL 2023</a>
+<td style="width:80%;padding:0.5em 0 0 0.8em;float: left;">QW LAN PL 2023
 </td>
 <td style="font-size:75%;text-align:right;padding:0 5px 1px 0;vertical-align: bottom;">08 Nov
 </td></tr>
